# ChatGPTCommandlineGeneration

./: Cargo.toml  README.md
plugins/cg/: cg.plugin.zsh
src/: api.rs  constant.rs  main.rs
