[package]
name = "cg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "socks"]}
tokio = { version = "1.26.0", features = ["net", "rt", "macros"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
rustyline = { version = "11.0.0", features = [], optional = true }
home = "0.5.4"

[features]
readline = ["rustyline"]